# nectar

./: .gitignore  Makefile  README.md  pelicanconf.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  pelican.yml
content/: 2202LeCalendrierDeTaVie.html  2205KeyboardMatrix.md  2207RealisationDunClavier.md  2209babbagecoin.md  About.md  Apple Watch.html  AppleWatch.html  Capté.md  KeyboardMatrix copy.md  KeyboardMatrix.md  Le calendrier de ta vie.html  LeCalendrierDeTaVie_en.html  Les trois générations de renards copy.md  Les trois générations de renards en.md  Les trois générations de renards fr.md  Quitting-My-Mobile-Phone-2022.md  RealisationDunClavier.md  Three-generations-of-foxes.md  TroisGénérationsDeRenards_en.md  Your life calendar.html  about en.md  about.md  blockchain.md  bloquer l'accès au réseau de VSCode.md  capté.md  memento_mori en.html  memento_mori.html  philosophie.md  un autre article à la noix fr.md
content/js/: app.ef08520c.fr.js  app.ef08520c.js  chunk-vendors.008dfdb2.js
theme/mysimple/css/: main.css
theme/mysimple/static/css/: app.c1a44f07.css  app.memento.css  main.css  main.example.css  main_old.css  reset.css
theme/mysimple/templates/: article.html  author.html  authors.html  base.html  categories.html  category.html  index.html  page.html  tag.html  tags.html  translations.html
themes/mysimple/templates/: base.html
