[tool.poetry]
name = "nectar"
version = "0.1.0"
description = ""
authors = ["mlgarchery <martial.garchery@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["markdown"], version = "^4.7.1"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
